--- a/style/style.css
+++ b/style/style.css
@@ -6,8 +6,7 @@ html {
 body {
   margin: 0;
   font-family: 'Inter', sans-serif;
-  font-size: 16px;
-  font-size: 21px;
+  font-size: 1.3rem;
   line-height: 140%;
   color: #fff;
 }
@@ -56,7 +55,7 @@ body {
 .header__title {
   margin-top: 40px;
   margin-bottom: 0;
-  font-size: 48px;
+  font-size: 3rem;
   font-weight: 800;
   font-style: italic;
   line-height: 100%;
@@ -111,20 +110,28 @@ body {
 }
 
 .fa-brands {
-  font-size: 28px;
+  font-size: 1.75rem;
   color: white;
 }
 
-.sertifications {
+.certifications {
   display: flex;
   justify-content: space-between;
 }
 
-.sertifications .left-column img {
+.certifications .left-column img {
   height: 687px;
 }
 
 @media screen and (max-width: 768px) {
+  .header__hero {
+    padding: 64px 70px;
+  }
+
+  .header__title {
+    font-size: 1.5rem;
+  }
+
   .logo {
     width: 90px;
   }
